# analysis

./: .gitignore  .gitlab-ci.yml  .syntastic_cpp_config  CMakeLists.txt  README.md  core.draco02.24055  core.draco02.24322  core.draco02.24855  core.draco02.24971  core.draco02.25305  doxygen.conf  dummy.xyz  dummy_traj.xyz  sliced_dummy_traj.xyz
lib/: CMakeLists.txt  Real3D.hpp  couf.hpp  frame.hpp  lb_frame.hpp  mctimeseries.hpp  molecule.hpp  timeseries.hpp  trajectory.hpp  vector.hpp
src/: CMakeLists.txt  Makefile  analyze.cpp  analyze_lb.cpp  analyze_timeseries.cpp  analyze_trajectory.cpp  average_timeseries.cpp  brute_force_dynamic_structure_factor.cpp  check.cpp  cmake_install.cmake  concatenate_trajectories.cpp  correlation_function.cpp  dynamic_structure_factor.cpp  dynamic_structure_factor_2d.cpp  dynamic_structure_factor_from_lattice.cpp  dynamic_structure_factor_from_lattice_2d.cpp  generate_timeseries_ete_over_rg.cpp  get_frames.cpp  get_last_frame.cpp  latticeize_configuration.cpp  manipulate_frame.cpp  minkowski_functionals.cpp  r_e_over_r_g.cpp  slice_configuration.cpp  traj_info.cpp  ts_correlation_function.cpp
test_suite/: CMakeLists.txt  Makefile  cmake_install.cmake  frame.cpp  mctimeseries.cpp  minkowski.cpp  molecule.cpp  suite.cpp  test_dsf.sh  test_suite.sh  timeseries.cpp  trajectory.cpp  vector.cpp
